gave each square on the board an id. starting messing around with the javascript

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <header>
         <h1>Game Stats</h1>
         <p class="header" id="blacksTurn">Black's Turn</p>
+        <p class="header">|</p>
         <p class="header" id="redsTurn">Red's Turn</p>
+        <p id="score"></p>
     </header>
 
     <!--Creating the board for the game-->
@@ -32,103 +34,103 @@
         <!--Row 1-->
         <!--Has black peices. alternating each td-->
         <tr>
-            <td class="empty"></td>
-            <td><p class="blackPiece" id="1"></p></td>
-            <td class="empty"></td>
+            <td class="empty" id="1"></td>
             <td><p class="blackPiece" id="2"></p></td>
-            <td class="empty"></td>
-            <td><p class="blackPiece" id="3"></p></td>
-            <td class="empty"></td>
+            <td class="empty" id="3"></td>
             <td><p class="blackPiece" id="4"></p></td>
+            <td class="empty" id="5"></td>
+            <td><p class="blackPiece" id="6"></p></td>
+            <td class="empty" id="7"></td>
+            <td><p class="blackPiece" id="8"></p></td>
         </tr>
 
         <!--Row 2-->
         <!--Has black peices. alternating each td-->
         <tr>
-            <td><p class="blackPiece" id="5"></p></td>
-            <td class="empty"></td>
-            <td><p class="blackPiece" id="6"></p></td>
-            <td class="empty"></td>
-            <td><p class="blackPiece" id="7"></p></td>
-            <td class="empty"></td>
-            <td><p class="blackPiece" id="8"></p></td>
-            <td class="empty"></td>
+            <td><p class="blackPiece" id="9"></p></td>
+            <td class="empty" id="10"></td>
+            <td><p class="blackPiece" id="11"></p></td>
+            <td class="empty" id="12"></td>
+            <td><p class="blackPiece" id="13"></p></td>
+            <td class="empty" id="14"></td>
+            <td><p class="blackPiece" id="15"></p></td>
+            <td class="empty" id="16"></td>
         </tr>
 
         <!--Row 3-->
         <!--Has black peices. alternating each td-->
         <tr>
-            <td class="empty"></td>
-            <td><p class="blackPiece" id="9"></p></td>
-            <td class="empty"></td>
-            <td><p class="blackPiece" id="10"></p></td>
-            <td class="empty"></td>
-            <td><p class="blackPiece" id="11"></p></td>
-            <td class="empty"></td>
-            <td><p class="blackPiece" id="12"></p></td>
+            <td class="empty" id="17"></td>
+            <td><p class="blackPiece" id="18"></p></td>
+            <td class="empty" id="19"></td>
+            <td><p class="blackPiece" id="20"></p></td>
+            <td class="empty" id="21"></td>
+            <td><p class="blackPiece" id="22"></p></td>
+            <td class="empty" id="23"></td>
+            <td><p class="blackPiece" id="24"></p></td>
         </tr>
 
         <!--Row 4-->
         <tr>
-            <td></td>
-            <td class="empty"></td>
-            <td></td>
-            <td class="empty"></td>
-            <td></td>
-            <td class="empty"></td>
-            <td></td>
-            <td class="empty"></td>
+            <td id="25"></td>
+            <td class="empty" id="26"></td>
+            <td id="27"></td>
+            <td class="empty" id="28"></td>
+            <td id="29"></td>
+            <td class="empty" id="30"></td>
+            <td id="31"></td>
+            <td class="empty" id="32"></td>
         </tr>
 
         <!--Row 5-->
         <tr>
-            <td class="empty"></td>
-            <td></td>
-            <td class="empty"></td>
-            <td></td>
-            <td class="empty"></td>
-            <td></td>
-            <td class="empty"></td>
-            <td></td>
+            <td class="empty" id="33"></td>
+            <td id="34"></td>
+            <td class="empty" id="35"></td>
+            <td id="36"></td>
+            <td class="empty" id="37"></td>
+            <td id="38"></td>
+            <td class="empty" id="39"></td>
+            <td id="40"></td>
         </tr>
 
         <!--Row 6-->
         <!--Has red peices. alternating each td-->
         <tr>
-            <td><p class="redPiece" id="13"></p></td>
-            <td class="empty"></td>
-            <td><p class="redPiece" id="14"></p></td>
-            <td class="empty"></td>
-            <td><p class="redPiece" id="15"></p></td>
-            <td class="empty"></td>
-            <td><p class="redPiece" id="16"></p></td>
-            <td class="empty"></td>
+            <td><p class="redPiece" id="41"></p></td>
+            <td class="empty" id="42"></td>
+            <td><p class="redPiece" id="43"></p></td>
+            <td class="empty" id="44"></td>
+            <td><p class="redPiece" id="45"></p></td>
+            <td class="empty" id="46"></td>
+            <td><p class="redPiece" id="47"></p></td>
+            <td class="empty" id="48"></td>
         </tr>
 
         <!--Row 7-->
         <!--Has red peices. alternating each td-->
         <tr>
-            <td class="empty"></td>
-            <td><p class="redPiece" id="17"></p></td>
-            <td class="empty"></td>
-            <td><p class="redPiece" id="18"></p></td>
-            <td class="empty"></td>
-            <td><p class="redPiece" id="19"></p></td>
-            <td class="empty"></td>
-            <td><p class="redPiece" id="20"></p></td>
+            <td class="empty" id="49"></td>
+            <td><p class="redPiece" id="50"></p></td>
+            <td class="empty" id="51"></td>
+            <td><p class="redPiece" id="52"></p></td>
+            <td class="empty" id="53"></td>
+            <td><p class="redPiece" id="54"></p></td>
+            <td class="empty" id="55"></td>
+            <td><p class="redPiece" id="56"></p></td>
         </tr>
 
         <!--Row 8-->
         <!--Has red peices. alternating each td-->
         <tr>
-            <td><p class="redPiece" id="21"></p></td>
-            <td class="empty"></td>
-            <td><p class="redPiece" id="22"></p></td>
-            <td class="empty"></td>
-            <td><p class="redPiece" id="23"></p></td>
-            <td class="empty"></td>
-            <td><p class="redPiece" id="24"></p></td>
-            <td class="empty"></td>
+            <td><p class="redPiece" id="57"></p></td>
+            <td class="empty" id="58"></td>
+            <td><p class="redPiece" id="59"></p></td>
+            <td class="empty" id="60"></td>
+            <td><p class="redPiece" id="61"></p></td>
+            <td class="empty" id="62"></td>
+            <td><p class="redPiece" id="63"></p></td>
+            <td class="empty" id="64"></td>
         </tr>
 
     </table>
