updating to master branch

--- a/index.html
+++ b/index.html
@@ -35,25 +35,25 @@
         <!--Has black peices. alternating each td-->
         <tr>
             <td class="empty" id="1"></td>
-            <td><p class="blackPiece" id="2"></p></td>
+            <td id="2"><p class="blackPiece" id="black1"></p></td>
             <td class="empty" id="3"></td>
-            <td><p class="blackPiece" id="4"></p></td>
+            <td id="4"><p class="blackPiece" id="black2"></p></td>
             <td class="empty" id="5"></td>
-            <td><p class="blackPiece" id="6"></p></td>
+            <td id="6"><p class="blackPiece" id="black3"></p></td>
             <td class="empty" id="7"></td>
-            <td><p class="blackPiece" id="8"></p></td>
+            <td id="8"><p class="blackPiece" id="black4"></p></td>
         </tr>
 
         <!--Row 2-->
         <!--Has black peices. alternating each td-->
         <tr>
-            <td><p class="blackPiece" id="9"></p></td>
+            <td id="9"><p class="blackPiece" id="black5"></p></td>
             <td class="empty" id="10"></td>
-            <td><p class="blackPiece" id="11"></p></td>
+            <td id="11"><p class="blackPiece" id="black6"></p></td>
             <td class="empty" id="12"></td>
-            <td><p class="blackPiece" id="13"></p></td>
+            <td id="13"><p class="blackPiece" id="black7"></p></td>
             <td class="empty" id="14"></td>
-            <td><p class="blackPiece" id="15"></p></td>
+            <td id="15"><p class="blackPiece" id="black8"></p></td>
             <td class="empty" id="16"></td>
         </tr>
 
@@ -61,13 +61,13 @@
         <!--Has black peices. alternating each td-->
         <tr>
             <td class="empty" id="17"></td>
-            <td><p class="blackPiece" id="18"></p></td>
+            <td id="18"><p class="blackPiece" id="black9"></p></td>
             <td class="empty" id="19"></td>
-            <td><p class="blackPiece" id="20"></p></td>
+            <td id="20"><p class="blackPiece" id="black10"></p></td>
             <td class="empty" id="21"></td>
-            <td><p class="blackPiece" id="22"></p></td>
+            <td id="22"><p class="blackPiece" id="black11"></p></td>
             <td class="empty" id="23"></td>
-            <td><p class="blackPiece" id="24"></p></td>
+            <td id="24"><p class="blackPiece" id="black12"></p></td>
         </tr>
 
         <!--Row 4-->
@@ -97,13 +97,13 @@
         <!--Row 6-->
         <!--Has red peices. alternating each td-->
         <tr>
-            <td><p class="redPiece" id="41"></p></td>
+            <td id="41"><p class="redPiece" id="red1"></p></td>
             <td class="empty" id="42"></td>
-            <td><p class="redPiece" id="43"></p></td>
+            <td id="43"><p class="redPiece" id="red2"></p></td>
             <td class="empty" id="44"></td>
-            <td><p class="redPiece" id="45"></p></td>
+            <td id="45"><p class="redPiece" id="red3"></p></td>
             <td class="empty" id="46"></td>
-            <td><p class="redPiece" id="47"></p></td>
+            <td id="47"><p class="redPiece" id="red4"></p></td>
             <td class="empty" id="48"></td>
         </tr>
 
@@ -111,25 +111,25 @@
         <!--Has red peices. alternating each td-->
         <tr>
             <td class="empty" id="49"></td>
-            <td><p class="redPiece" id="50"></p></td>
+            <td id="50"><p class="redPiece" id="red5"></p></td>
             <td class="empty" id="51"></td>
-            <td><p class="redPiece" id="52"></p></td>
+            <td id="52"><p class="redPiece" id="red6"></p></td>
             <td class="empty" id="53"></td>
-            <td><p class="redPiece" id="54"></p></td>
+            <td id="54"><p class="redPiece" id="red7"></p></td>
             <td class="empty" id="55"></td>
-            <td><p class="redPiece" id="56"></p></td>
+            <td id="56"><p class="redPiece" id="red8"></p></td>
         </tr>
 
         <!--Row 8-->
         <!--Has red peices. alternating each td-->
         <tr>
-            <td><p class="redPiece" id="57"></p></td>
+            <td id="57"><p class="redPiece" id="red9"></p></td>
             <td class="empty" id="58"></td>
-            <td><p class="redPiece" id="59"></p></td>
+            <td id="59"><p class="redPiece" id="red10"></p></td>
             <td class="empty" id="60"></td>
-            <td><p class="redPiece" id="61"></p></td>
+            <td id="61"><p class="redPiece" id="red11"></p></td>
             <td class="empty" id="62"></td>
-            <td><p class="redPiece" id="63"></p></td>
+            <td id="63"><p class="redPiece" id="red12"></p></td>
             <td class="empty" id="64"></td>
         </tr>
 
