changed html so it's easier to work with using javascript

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/style.css">
 
 </head>
-<body>
+<main>
 
     <header>
         <h1>Game Stats</h1>
@@ -34,106 +34,106 @@
         <!--Row 1-->
         <!--Has black peices. alternating each td-->
         <tr>
-            <td class="empty" id="1"></td>
-            <td id="2"><p class="blackPiece" id="black1"></p></td>
-            <td class="empty" id="3"></td>
-            <td id="4"><p class="blackPiece" id="black2"></p></td>
-            <td class="empty" id="5"></td>
-            <td id="6"><p class="blackPiece" id="black3"></p></td>
-            <td class="empty" id="7"></td>
-            <td id="8"><p class="blackPiece" id="black4"></p></td>
+            <td class="empty"></td>
+            <td><span class="blackPiece" id="0"></span></td>
+            <td class="empty"></td>
+            <td><span class="blackPiece" id="1"></span></td>
+            <td class="empty"></td>
+            <td><span class="blackPiece" id="2"></span></td>
+            <td class="empty"></td>
+            <td><span class="blackPiece" id="3"></span></td>
         </tr>
 
         <!--Row 2-->
         <!--Has black peices. alternating each td-->
         <tr>
-            <td id="9"><p class="blackPiece" id="black5"></p></td>
-            <td class="empty" id="10"></td>
-            <td id="11"><p class="blackPiece" id="black6"></p></td>
-            <td class="empty" id="12"></td>
-            <td id="13"><p class="blackPiece" id="black7"></p></td>
-            <td class="empty" id="14"></td>
-            <td id="15"><p class="blackPiece" id="black8"></p></td>
-            <td class="empty" id="16"></td>
+            <td><span class="blackPiece" id="4"></span></td>
+            <td class="empty"></td>
+            <td><span class="blackPiece" id="5"></span></td>
+            <td class="empty"></td>
+            <td><span class="blackPiece" id="6"></span></td>
+            <td class="empty"></td>
+            <td><span class="blackPiece" id="7"></span></td>
+            <td class="empty"></td>
         </tr>
 
-        <!--Row 3-->
+         <!--Row 3-->
         <!--Has black peices. alternating each td-->
         <tr>
-            <td class="empty" id="17"></td>
-            <td id="18"><p class="blackPiece" id="black9"></p></td>
-            <td class="empty" id="19"></td>
-            <td id="20"><p class="blackPiece" id="black10"></p></td>
-            <td class="empty" id="21"></td>
-            <td id="22"><p class="blackPiece" id="black11"></p></td>
-            <td class="empty" id="23"></td>
-            <td id="24"><p class="blackPiece" id="black12"></p></td>
+            <td class="empty"></td>
+            <td><span class="blackPiece" id="8"></span></td>
+            <td class="empty"></td>
+            <td><span class="blackPiece" id="9"></span></td>
+            <td class="empty"></td>
+            <td><span class="blackPiece" id="10"></span></td>
+            <td class="empty"></td>
+            <td><span class="blackPiece" id="11"></span></td>
         </tr>
 
         <!--Row 4-->
         <tr>
-            <td id="25"></td>
-            <td class="empty" id="26"></td>
-            <td id="27"></td>
-            <td class="empty" id="28"></td>
-            <td id="29"></td>
-            <td class="empty" id="30"></td>
-            <td id="31"></td>
-            <td class="empty" id="32"></td>
+            <td></td>
+            <td class="empty"></td>
+            <td></td>
+            <td class="empty"></td>
+            <td></td>
+            <td class="empty"></td>
+            <td></td>
+            <td class="empty"></td>
         </tr>
 
         <!--Row 5-->
         <tr>
-            <td class="empty" id="33"></td>
-            <td id="34"></td>
-            <td class="empty" id="35"></td>
-            <td id="36"></td>
-            <td class="empty" id="37"></td>
-            <td id="38"></td>
-            <td class="empty" id="39"></td>
-            <td id="40"></td>
+            <td class="empty"></td>
+            <td></td>
+            <td class="empty"></td>
+            <td></td>
+            <td class="empty"></td>
+            <td></td>
+            <td class="empty"></td>
+            <td></td>
         </tr>
 
         <!--Row 6-->
         <!--Has red peices. alternating each td-->
         <tr>
-            <td id="41"><p class="redPiece" id="red1"></p></td>
-            <td class="empty" id="42"></td>
-            <td id="43"><p class="redPiece" id="red2"></p></td>
-            <td class="empty" id="44"></td>
-            <td id="45"><p class="redPiece" id="red3"></p></td>
-            <td class="empty" id="46"></td>
-            <td id="47"><p class="redPiece" id="red4"></p></td>
-            <td class="empty" id="48"></td>
+            <td><p class="redPiece" id="12"></p></td>
+            <td class="empty"></td>
+            <td><p class="redPiece" id="13"></p></td>
+            <td class="empty"></td>
+            <td><p class="redPiece" id="14"></p></td>
+            <td class="empty"></td>
+            <td><p class="redPiece" id="15"></p></td>
+            <td class="empty"></td>
         </tr>
 
         <!--Row 7-->
         <!--Has red peices. alternating each td-->
         <tr>
-            <td class="empty" id="49"></td>
-            <td id="50"><p class="redPiece" id="red5"></p></td>
-            <td class="empty" id="51"></td>
-            <td id="52"><p class="redPiece" id="red6"></p></td>
-            <td class="empty" id="53"></td>
-            <td id="54"><p class="redPiece" id="red7"></p></td>
-            <td class="empty" id="55"></td>
-            <td id="56"><p class="redPiece" id="red8"></p></td>
+            <td class="empty"></td>
+            <td><p class="redPiece" id="16"></p></td>
+            <td class="empty"></td>
+            <td><p class="redPiece" id="17"></p></td>
+            <td class="empty"></td>
+            <td><p class="redPiece" id="18"></p></td>
+            <td class="empty"></td>
+            <td><p class="redPiece" id="19"></p></td>
         </tr>
 
         <!--Row 8-->
         <!--Has red peices. alternating each td-->
         <tr>
-            <td id="57"><p class="redPiece" id="red9"></p></td>
-            <td class="empty" id="58"></td>
-            <td id="59"><p class="redPiece" id="red10"></p></td>
-            <td class="empty" id="60"></td>
-            <td id="61"><p class="redPiece" id="red11"></p></td>
-            <td class="empty" id="62"></td>
-            <td id="63"><p class="redPiece" id="red12"></p></td>
-            <td class="empty" id="64"></td>
+            <td><p class="redPiece" id="20"></p></td>
+            <td class="empty"></td>
+            <td><p class="redPiece" id="21"></p></td>
+            <td class="empty">
+            <td><p class="redPiece" id="22"></p></td>
+            <td class="empty"></td>
+            <td><p class="redPiece" id="23"></p></td>
+            <td class="empty"></td>
         </tr>
-
     </table>
-
+    
+</main>
 </body>
 </html>
