finished most of the features

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
     <header>
         <h1>Game Stats</h1>
-        <p class="header" id="blacksTurn">Black's Turn</p>
+        <h2 class="header" id="blacksTurn">Black's Turn</h2>
         <p class="header">|</p>
-        <p class="header" id="redsTurn">Red's Turn</p>
+        <h2 class="header" id="redsTurn">Red's Turn</h2>
         <p id="score"></p>
     </header>
 
@@ -35,25 +35,25 @@
         <!--Has black peices. alternating each td-->
         <tr>
             <td class="empty"></td>
-            <td><span class="blackPiece" id="0"></span></td>
-            <td class="empty"></td>
             <td><span class="blackPiece" id="1"></span></td>
             <td class="empty"></td>
             <td><span class="blackPiece" id="2"></span></td>
             <td class="empty"></td>
             <td><span class="blackPiece" id="3"></span></td>
+            <td class="empty"></td>
+            <td><span class="blackPiece" id="4"></span></td>
         </tr>
 
         <!--Row 2-->
         <!--Has black peices. alternating each td-->
         <tr>
-            <td><span class="blackPiece" id="4"></span></td>
-            <td class="empty"></td>
             <td><span class="blackPiece" id="5"></span></td>
             <td class="empty"></td>
             <td><span class="blackPiece" id="6"></span></td>
             <td class="empty"></td>
             <td><span class="blackPiece" id="7"></span></td>
+            <td class="empty"></td>
+            <td><span class="blackPiece" id="8"></span></td>
             <td class="empty"></td>
         </tr>
 
@@ -61,13 +61,13 @@
         <!--Has black peices. alternating each td-->
         <tr>
             <td class="empty"></td>
-            <td><span class="blackPiece" id="8"></span></td>
-            <td class="empty"></td>
             <td><span class="blackPiece" id="9"></span></td>
             <td class="empty"></td>
             <td><span class="blackPiece" id="10"></span></td>
             <td class="empty"></td>
             <td><span class="blackPiece" id="11"></span></td>
+            <td class="empty"></td>
+            <td><span class="blackPiece" id="12"></span></td>
         </tr>
 
         <!--Row 4-->
@@ -97,13 +97,13 @@
         <!--Row 6-->
         <!--Has red peices. alternating each td-->
         <tr>
-            <td><p class="redPiece" id="12"></p></td>
-            <td class="empty"></td>
             <td><p class="redPiece" id="13"></p></td>
             <td class="empty"></td>
             <td><p class="redPiece" id="14"></p></td>
             <td class="empty"></td>
             <td><p class="redPiece" id="15"></p></td>
+            <td class="empty"></td>
+            <td><p class="redPiece" id="16"></p></td>
             <td class="empty"></td>
         </tr>
 
@@ -111,25 +111,25 @@
         <!--Has red peices. alternating each td-->
         <tr>
             <td class="empty"></td>
-            <td><p class="redPiece" id="16"></p></td>
-            <td class="empty"></td>
             <td><p class="redPiece" id="17"></p></td>
             <td class="empty"></td>
             <td><p class="redPiece" id="18"></p></td>
             <td class="empty"></td>
             <td><p class="redPiece" id="19"></p></td>
+            <td class="empty"></td>
+            <td><p class="redPiece" id="20"></p></td>
         </tr>
 
         <!--Row 8-->
         <!--Has red peices. alternating each td-->
         <tr>
-            <td><p class="redPiece" id="20"></p></td>
-            <td class="empty"></td>
             <td><p class="redPiece" id="21"></p></td>
-            <td class="empty">
-            <td><p class="redPiece" id="22"></p></td>
             <td class="empty"></td>
+            <td><p class="redPiece" id="22"></p></td>
+            <td class="empty">
             <td><p class="redPiece" id="23"></p></td>
+            <td class="empty"></td>
+            <td><p class="redPiece" id="24"></p></td>
             <td class="empty"></td>
         </tr>
     </table>
