added some styling

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <main>
 
     <header>
-        <h1>Game Stats</h1>
+        <h1>Checkers Game</h1>
         <h2 class="header" id="blacksTurn">Black's Turn</h2>
         <p class="header">|</p>
         <h2 class="header" id="redsTurn">Red's Turn</h2>
